ビューの作成

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -15,5 +15,24 @@
   <%= @book.publisher %>
 </p>
 
-<%= link_to 'Edit', edit_book_path(@book) %> |
-<%= link_to 'Back', books_path %>
+    <%= link_to '編集', edit_book_path(@book) %> |
+    <%= link_to '戻る', books_path %> |
+    <%= link_to 'レビューを書く', new_book_review_path(@book) %> |
+
+    <hr>
+
+    <h2>レビュー一覧</h2>
+    <% @book.reviews.each do |review| %>
+      <p>
+        <%= review.body %> <br>
+        by <%= review.user.email %>
+      </p>
+    <% end %>
+    <hr>
+    <h2>レビューを残したユーザー一覧</h2>
+    <%# throughオプションのおかげで、BookはReviewを介してUserにアクセスできる  %>
+    <% @book.users.each do |user| %>
+      <p><%= user.email %></p>
+    <% end %>
+  </div>
+</div>
